--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react-icons": "^5.0.1",
+    "axios": "^1.13.5",
+    "lucide-react": "^0.575.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
-    "react-router-dom": "^6.8.0"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.8.0",
+    "recharts": "^3.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
